force-app/main/default/objects/Income__c/fields/MonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIncome__c</fullName>
    <description>Monthly Income recieved from source</description>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>