force-app/main/default/objects/Income__c/fields/OtherSource__c.field-meta.xml
<CustomField>
    <fullName>OtherSource__c</fullName>
    <description>Other income source of an applicant</description>
    <label>Other Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>