force-app/main/default/objects/Income__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Income Source of an applicant</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alimony</fullName>
            </value>
            <value>
                <fullName>Automobile Allowance</fullName>
            </value>
            <value>
                <fullName>Boarder Income</fullName>
            </value>
            <value>
                <fullName>Capital Gains</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Foster Care</fullName>
            </value>
            <value>
                <fullName>Housing or Parsonage</fullName>
            </value>
            <value>
                <fullName>Interest and Dividends</fullName>
            </value>
            <value>
                <fullName>Mortgage Credit Certificate</fullName>
            </value>
            <value>
                <fullName>Mortgage Differential</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Notes Receivable</fullName>
            </value>
            <value>
                <fullName>Public Assistance</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Royalty Payments</fullName>
            </value>
            <value>
                <fullName>Separate Maintenance</fullName>
            </value>
            <value>
                <fullName>Social Security</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>VA Compensation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>